--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/phaser/3.53.1/phaser.js"></script>
 
-        <script src = "AKidInSpace.js"></script>
+        <script src = "Leapfrog.js"></script>
 
     
 </body>
