--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head scroll="no" style="overflow: hidden">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>A Kid in Space</title>
+    <title>Leapfrog</title>
 </head>
 <body>
 
