sa vi dère pur est do fraiche

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head scroll="no" style="overflow: hidden">
     <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
-    <title>Leapfrog</title>
+    <title>Kaeru no Kami</title>
 </head>
 <body>
 
         <script src = "https://cdnjs.cloudflare.com/ajax/libs/phaser/3.53.1/phaser.js"></script>
 
-        <script src = "Leapfrog.js"></script>
+        <script src = "kaeruNoKami.js"></script>
 
     
 </body>
